Edited file 'webapps/wordcloud/webapp.json'

--- a/webapps/wordcloud/webapp.json
+++ b/webapps/wordcloud/webapp.json
@@ -39,6 +39,6 @@
         //"leftBar": "STD_FORM",
         "leftBarParams": [],
 		"canFilter": false,
-        "canFacet": true
+        "canFacet": false
     }
 }
