Edited file 'webapps/wordcloud/webapp.json'

--- a/webapps/wordcloud/webapp.json
+++ b/webapps/wordcloud/webapp.json
@@ -41,7 +41,7 @@
             },
 
             {
-                "name": "facet_col",
+                "name": "facet_column",
                 "type": "DATASET_COLUMN",
                 "datasetParamName": "dataset",
                 "label": "Breakdown by",
