Edited file 'webapps/wordcloud/webapp.json'

--- a/webapps/wordcloud/webapp.json
+++ b/webapps/wordcloud/webapp.json
@@ -37,7 +37,8 @@
                 ],
                 "label": "Language",
                 "description": "",
-                "mandatory": false
+                "mandatory": false,
+                "defaultValue": "en"
             },
 
             {
