Edited file 'webapps/wordcloud/webapp.json'

--- a/webapps/wordcloud/webapp.json
+++ b/webapps/wordcloud/webapp.json
@@ -4,7 +4,7 @@
         // label: name of the webapp as displayed, should be short
         "label": "Wordcloud",
         // description: longer string to help end users understand what this webapp does
-        "description": "",
+        "description": "Generate a wordcloud based on a text column",
         // icon: must be one of the FontAwesome 3.2.1 icons, complete list here at https://fontawesome.com/v3.2.1/icons/
         "icon": "icon-font"
     },
