--- a/code-env/python/spec/requirements.txt
+++ b/code-env/python/spec/requirements.txt
@@ -1,6 +1,5 @@
 spacy>=2.2.2
 jieba==0.42.1
-mecab-python3==0.996.5
 unidic-lite==1.0.6
 SudachiPy==0.4.9
 pymorphy2==0.8
@@ -10,6 +9,8 @@ pymorphy2-dicts-uk==2.4.1.1.1460299261
 pythainlp==2.2.0b1
 natto-py==0.9.2
 pyvi==0.1
+spacymoji==2.0.0
+spacy-lookups-data==0.3.2
 flask
 matplotlib
 wordcloud
