--- a/code-env/python/spec/requirements.txt
+++ b/code-env/python/spec/requirements.txt
@@ -11,7 +11,7 @@ natto-py==0.9.2
 pyvi==0.1
 spacymoji==2.0.0
 spacy-lookups-data==0.3.2
-flask
-matplotlib
-wordcloud
-fonttools
+flask==1.1.2
+matplotlib==3.3.1
+wordcloud==1.8.0
+fonttools==4.14.0
