--- a/code-env/python/spec/requirements.txt
+++ b/code-env/python/spec/requirements.txt
@@ -3,6 +3,7 @@ fastcore==1.3.1
 jieba==0.42.1
 langid==1.1.6
 natto-py==0.9.2
+Pillow==8.0.0
 pycld3==0.20
 pymorphy2-dicts-ru==2.4.404381.4453942
 pymorphy2-dicts==2.4.393442.3710985
