--- a/code-env/python/spec/requirements.txt
+++ b/code-env/python/spec/requirements.txt
@@ -5,7 +5,7 @@ pymorphy2==0.9.1
 jieba==0.42.1
 pyvi==0.1
 regex==2020.10.28
-spacy[th]==2.3.4
+spacy[lookups,th]==2.3.4
 tqdm==4.50.2
 matplotlib==3.3.1
 wordcloud==1.8.0
