--- a/code-env/python/spec/requirements.txt
+++ b/code-env/python/spec/requirements.txt
@@ -1,11 +1,11 @@
-emoji==0.6.0
 pymorphy2-dicts-ru==2.4.417127.4579844
 pymorphy2-dicts-uk==2.4.1.1.1460299261
 pymorphy2==0.9.1
 jieba==0.42.1
 pyvi==0.1
-regex==2020.10.28
-spacy[lookups,th]==2.3.4
+regex==2020.11.13
+spacy[lookups,th]==2.3.5
+spacymoji==2.0.0
 tqdm==4.50.2
 matplotlib==3.3.1
 wordcloud==1.8.0
