Remove spacymoji and avoid loading stopwords if not required

--- a/code-env/python/spec/requirements.txt
+++ b/code-env/python/spec/requirements.txt
@@ -5,7 +5,7 @@ jieba==0.42.1
 pyvi==0.1
 regex==2020.11.13
 spacy[lookups,th]==2.3.5
-spacymoji==2.0.0
+emoji==1.2.0
 tqdm==4.50.2
 matplotlib==3.3.1
 wordcloud==1.8.0
