--- a/code-env/python/spec/requirements.txt
+++ b/code-env/python/spec/requirements.txt
@@ -4,11 +4,11 @@ pymorphy2==0.9.1
 jieba==0.42.1
 pyvi==0.1
 regex==2020.11.13
-spacy[ja,lookups,th]==2.3.5
+spacy[lookups,ja,th]==3.0.7
 emoji==1.2.0
 tqdm==4.50.2
 matplotlib==3.3.1
 wordcloud==1.8.0
 fonttools==4.14.0
 pathvalidate==2.3.0
-fastcore==1.3.1
+fastcore==1.3.19
