--- a/code-env/python/spec/requirements.txt
+++ b/code-env/python/spec/requirements.txt
@@ -4,11 +4,13 @@ pymorphy2==0.9.1
 jieba==0.42.1
 pyvi==0.1
 regex==2021.4.4
-spacy[lookups,ja,th]==3.0.7
+spacy[lookups,ja,th]==3.0.7; python_version < '3.9'
+spacy[lookups,ja,th]==3.5.2; python_version >= '3.9'
 emoji==0.6.0
 tqdm==4.60.0
 matplotlib==3.3.1
-wordcloud==1.8.0
+wordcloud==1.8.0; python_version < '3.9'
+wordcloud==1.8.2.2; python_version >= '3.9'
 fonttools==4.14.0
 pathvalidate==2.3.0
 fastcore==1.3.1
