--- a/code-env/python/spec/requirements.txt
+++ b/code-env/python/spec/requirements.txt
@@ -9,10 +9,9 @@ spacy[lookups,ja,th]==3.5.2; python_version >= '3.9'
 emoji==1.2.0
 tqdm==4.60.0
 matplotlib==3.3.1
-wordcloud==1.8.0; python_version < '3.9'
-wordcloud==1.8.2.2; python_version >= '3.9'
+wordcloud==1.8.0; python_version <= '3.6'
+wordcloud==1.9.3; python_version > '3.6'
 fonttools==4.14.0
 pathvalidate==2.3.0
 fastcore==1.3.19
 sudachipy==0.6.0; python_version == '3.6'
-pillow<=9.5.0
