--- a/code-env/python/spec/requirements.txt
+++ b/code-env/python/spec/requirements.txt
@@ -15,3 +15,4 @@ fonttools==4.14.0
 pathvalidate==2.3.0
 fastcore==1.3.19
 sudachipy==0.6.0; python_version == '3.6'
+sudachipy<0.6.10; python_version >= '3.7' and python_version < '3.9'
